[project]
name = "agents-starterkit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43.11",
    "langchain>=0.3.0",
    "python-dotenv>=1.2.2",
    "twilio>=9.10.9",
    "langgraph>=0.4.1",
    "langchain-openai>=0.3.0",
    "langchain-google-genai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "mem0ai>=0.1.18",
]
